- more accurate deps version
- name_encode and name_decode

2.007 2020-11-18
- add Rule.recipe_raw

2.006 2020-11-18
- internal changes

2.005 2020-11-16
- doc has_target more accurately
- add targets method

2.004 2020-11-06
- identify default target better

2.003 2020-11-01
- optional new param InDir to be "current dir"

2.002 2020-08-17
- get_target renamed to correct "has_target"

2.001 2020-08-16
- fix Changes formatting
- also FSFunctionMap implements virtual filesystem
- tidyup and extra release prompted by CPAN Day

2.000 2020-08-15
- works on Win32 including on "Perl in space", in GNU make compatible style
- variable expansion now similar (though not yet identical) to GNU make
- vpaths implemented
- immutable objects simplify code
- extensible functions interface

1.2.0 2018-06-23
- Rename pmake script to pure-perl-make to avoid conflicting with the BSD pmake (https://github.com/klp2/Make/issues/6)

1.1.5 2017-06-25
- Clean up MANIFEST, especially to avoid MYMETA.* files ending up in the distribution
- Update perltidy config, get rid of tabs

1.1.4 2017-06-21
- Fix META information to modernize Makefile.PL and META.JSON. (Chase Whitener)
- Remove .git info from the build. (Chase Whitener)
- Split things out into their proper module files. (Chase Whitener)

1.1.3 2017-01-23
- new pod test, pod fixes, MANIFEST fix (Lisa Hare)

1.1.2 2016-03-08
- fixed declaration of minimum Test::Compile version
- a number of CPANtesters failures occured because the test had an older non-OO version installed
- use strict, use warnings everywhere, other bits of cleanup

1.1.1 2016-03-05
- clean-up with tidyall/perltidy, add configs for them
- add tidy related tests
- use strict and warnings in all tests
- mostly releasing to get properly CPAN indexed

1.1.0 2016-03-05
- Cheat to allow installation on Strawberry Perl 5.22.0
- add META.yml and META.json
- modernize Makefile.PL
- add /lib and move Make.pm there
- match up distribution and module version numbers

1.00 1999-04-11
