@@ -57,6 +57,7 @@ my %WriteMakefileArgs = (
         "warnings"         => 0,
         "Text::Balanced"   => '2.03',
         "Text::ParseWords" => '3.24',
+        "Graph"            => '0.9708',
     },
     "TEST_REQUIRES" => {
         "Test::More" => "1.00",
