@@ -162,6 +162,45 @@ is_deeply $got, ['other'] or diag explain $got;
 $got = $all_rule->auto_vars($all_target);
 ok exists $got->{'@'}, 'Rules.Vars.EXISTS';
 is_deeply [ keys %$got ], [qw( @ * ^ ? < )] or diag explain $got;
+my $g = $m->as_graph;
+my %e;
+$e{ $_->[0] }{ $_->[1] } = $g->get_edge_attributes(@$_) || {} for $g->edges;
+my %n = map +( $_ => $g->get_vertex_attributes($_) ), $g->vertices;
+$got = [ \%n, \%e ];
+is_deeply $got,
+    [
+    {
+        'rule:all:0' => {
+            'recipe'     => [],
+            'recipe_raw' => []
+        },
+        'rule:other:0' => {
+            'recipe'     => ['@echo $@ $^ $< $(var) >"$(tempfile)"'],
+            'recipe_raw' => ["\@echo \$@ \$^ \$< \$(var) \\\n   >\"\$(tempfile)\""]
+        },
+        'target:Changes' => undef,
+        'target:README'  => undef,
+        'target:all'     => undef,
+        'target:other'   => undef
+    },
+    {
+        'rule:all:0' => {
+            'target:other' => {}
+        },
+        'rule:other:0' => {
+            'target:Changes' => {},
+            'target:README'  => {}
+        },
+        'target:all' => {
+            'rule:all:0' => {}
+        },
+        'target:other' => {
+            'rule:other:0' => {}
+        }
+    }
+    ],
+    'graph'
+    or diag explain $got;
 
 $m = Make->new;
 $m->parse( \sprintf <<'EOF', $tempfile, $^X );
